# iTunes-qsplugin

./: .gitignore  Documentation.markdown  Documentation.mdown  Info.plist  QSiTunesDefines.h  README.markdown  element-Info.plist  element.xml  iPodDBParse.py  iTunes Set Volume.scpt
Code/: QSAlbumArtSources.h  QSAlbumArtSources.m  QSiTunesActionProvider.h  QSiTunesActionProvider.m  QSiTunesBridge.h  QSiTunesBridge.m  QSiTunesDatabase.h  QSiTunesDatabase.m  QSiTunesPrefPane.h  QSiTunesPrefPane.m  QSiTunesSelectionSource.h  QSiTunesSelectionSource.m  QSiTunesSource.h  QSiTunesSource.m
English.lproj/: Localizable.strings  QSAction.commandFormat.strings  QSAction.commandFormats.strings  QSAction.name.strings  QSPreset.name.strings
Old/: QSiTunesMonitor.h  QSiTunesMonitor.m
QSTunesDBTool/: QSTunesDBTool.1  QSTunesDBTool.m  QSTunesDBTool_Prefix.pch
QSTunesDBTool/QSTunesDBTool.xcode/: alcor.mode1  project.pbxproj
QSTunesDBTool/QSTunesDBTool.xcodeproj/: alcor.mode1  project.pbxproj
QSiPodParser/: QSiPodParser.1  QSiPodParser.mm  QSiPodParser_Prefix.pch  iPodDB.cpp  iPodDB.h  iTunesDBDump.mm
QSiPodParser/QSiPodParser.xcode/: alcor.mode1  project.pbxproj
QSiPodParser/QSiPodParser.xcodeproj/: alcor.mode1  project.pbxproj
QSiTunesDatabase/: Info.plist  QSiTunesDatabaseAppDelegate.h  QSiTunesDatabaseAppDelegate.m  QSiTunesDatabase_Prefix.pch  main.m
QSiTunesDatabase/English.lproj/: InfoPlist.strings
QSiTunesDatabase/QSiTunesDatabase.xcode/: alcor.mode1  project.pbxproj
QSiTunesDatabase/QSiTunesDatabase.xcodeproj/: alcor.mode1  project.pbxproj
QSiTunesDatabase/QSiTunesDatabase_DataModel.xcdatamodel/: elements  layout
Resources/: QSiTunesPrefPane.xib  iTunes.original.scpt  iTunes.scpt  iTunesLibraryPlaylistIcon.icns  iTunesMonitor  iTunesNext.icns  iTunesPartyShufflePlaylistIcon.icns  iTunesPause.icns  iTunesPlay-Pause.icns  iTunesPlay.icns  iTunesPlaylistIcon.icns  iTunesPrevious.icns  iTunesPurchasedMusicPlaylistIcon.icns  iTunesQuicksilverPlaylistIcon.icns  iTunesSmartPlaylistIcon.icns  iTunesStop.icns
Resources/QSiTunesPrefPane.nib/: designable.nib  keyedobjects.nib
Resources/QSiTunesPrefPane~.nib/: keyedobjects.nib
SOURCES/: iTunesBrowsers.tif
SOURCES/DAAP/libopendaap-0.3.0/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  client.c  client.h  client.lo  config.h  config.h.in  config.status  configure  configure.ac  daap.c  daap.h  daap.lo  daap_readtypes.h  discover.c  discover.h  discover.lo  dmap_generics.c  dmap_generics.h  dmap_generics.lo  global.c  global.lo  http_client.c  http_client.h  http_client.lo  ioloop.c  ioloop.lo  libopendaap.3  libopendaap.dsp  libopendaap.dsw  libopendaap.la  libtool  opendaap.pc  opendaap.pc.in  portability.h  private.h  thread.h  (+1 more)
SOURCES/DAAP/libopendaap-0.3.0/.deps/: client.Plo  daap.Plo  discover.Plo  dmap_generics.Plo  global.Plo  http_client.Plo  ioloop.Plo  threadpool.Plo
SOURCES/DAAP/libopendaap-0.3.0/.libs/: libopendaap  libopendaap.0.1.0  libopendaap.la  libopendaap.lai
SOURCES/DAAP/libopendaap-0.3.0/authentication/: Makefile.am  Makefile.in  hasher.c  hasher.lo  libauthentication.la  md5.c  md5.lo
SOURCES/DAAP/libopendaap-0.3.0/authentication/.deps/: hasher.Plo  md5.Plo
SOURCES/DAAP/libopendaap-0.3.0/authentication/.libs/: libauthentication.la
SOURCES/DAAP/libopendaap-0.3.0/debug/: Makefile.am  Makefile.in  debug.c  debug.h  debug.lo  libdebug.la
SOURCES/DAAP/libopendaap-0.3.0/debug/.deps/: debug.Plo
SOURCES/DAAP/libopendaap-0.3.0/debug/.libs/: libdebug.la
SOURCES/DAAP/libopendaap-0.3.0/mDNS/: Makefile.am  Makefile.in  libmDNS.la  mDNS.c  mDNS.lo  mDNSClientAPI.h  mDNSDebug.h  mDNSPlatformFunctions.h  mDNSPosix.c  mDNSPosix.h  mDNSPosix.lo  mDNSUNP.c  mDNSUNP.h  mDNSUNP.lo
SOURCES/DAAP/libopendaap-0.3.0/mDNS/.deps/: mDNS.Plo  mDNSPosix.Plo  mDNSUNP.Plo
SOURCES/DAAP/libopendaap-0.3.0/mDNS/.libs/: libmDNS.la
SOURCES/DAAP/libopendaap-0.3.0/mDNS/win32/: DNSServiceDiscovery.c  DNSServiceDiscovery.h  DNSServices.c  DNSServices.h  mDNSWin32.c  mDNSWin32.h
SOURCES/DAAP/tunesbrowser-0.2.0/: COPYING  ChangeLog  Makefile.am  Makefile.in  albumlist.c  artistlist.c  audioplayer.c  config.h.in  configure  configure.ac  daap.c  lists.h  main.c  misc_ui.c  partyshuffle.c  songlist.c  sourcelist.c  tunesbrowser.1  tunesbrowser.glade  tunesbrowser.h  utilities.c
SOURCES/QSDAAP/: QSDAAP.1  QSDAAP.m  QSDAAP_Prefix.pch
Scripts/: Decrease Rating.scpt  Decrease iTunes Volume.scpt  Increase iTunes Volume.scpt  Set Rating to 2.scpt  Set Rating to 4.scpt
iPod Parsing/: db.py  iTunesParse.py  iTunesParse2.py  itunesdb-0.04.tar  itunesdb-0.04.tar.bz2
iPod Parsing/iPodDB/: iPodDB.h  license.txt  (+1 more)
iTunes Controller Scripts/: 1. Play-Pause.scpt  4. Next Album.scpt  6. Previous Album.scpt
iTunes.xcdatamodel/: elements  layout
iTunesElement.xcodeproj/: alchemist.mode1  project.pbxproj
iTunesModule.xcodeproj/: alcor.mode1  project.pbxproj
(+25 files in other folders)
